Refactoring based on lint suggestions